--- a/website/src/css/custom.scss
+++ b/website/src/css/custom.scss
@@ -131,6 +131,14 @@ ul {
   }
 }
 
+.menu__list {
+  margin: 25px 0 0;
+}
+
+.menu__link {
+  font-size: 20px;
+}
+
 .cardTitle {
   font-size: 1.5rem;
   font-weight: 700;
